--- a/src/styles/blocks/testimonials.scss
+++ b/src/styles/blocks/testimonials.scss
@@ -38,6 +38,11 @@
     height: 153px;
     border-radius: 50%;
     margin-bottom: 28px;
+    transition: 0.5s;
+
+    &:hover {
+      transform: scale(1.15);
+    }
   }
   
 
